--- a/Contact.html
+++ b/Contact.html
@@ -296,7 +296,9 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
                   <h6 class="u-hover-feature u-text u-text-default u-text-11"> Privacy Policy</h6>
                   <h6 class="u-hover-feature u-text u-text-default u-text-12"> Terms and Conditions</h6>
                   <h6 class="u-hover-feature u-text u-text-default u-text-13"> Support</h6>
-                  <h6 class="u-hover-feature u-text u-text-default u-text-14"> FAQ</h6>
+                  <h6 class="u-hover-feature u-text u-text-default u-text-14">
+                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-text-hover-palette-1-base u-btn-5" href="Projects.html#sec-b1a8"> FAQ</a>
+                  </h6>
                 </div>
               </div>
               <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-14-sm u-size-14-xs u-size-18-lg u-size-18-xl u-size-30-md u-layout-cell-4">
@@ -310,7 +312,7 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
                         <input type="email" placeholder="your email address" id="email-1f06" name="email" class="u-input u-input-rectangle u-input-1" required="">
                       </div>
                       <div class="u-align-left u-form-group u-form-submit u-label-none">
-                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-hover-black u-palette-1-base u-btn-5">Send</a>
+                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-hover-black u-palette-1-base u-btn-6">Send</a>
                         <input type="submit" value="submit" class="u-form-control-hidden">
                       </div>
                       <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
