--- a/Services.html
+++ b/Services.html
@@ -225,7 +225,7 @@
         <p class="u-align-center u-text u-text-grey-40 u-text-3" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"> Offering innovative and reliable professional, technical, and consulting services, delivering high quality products at competitive prices that precisely match the requirements of our customers.</p>
         <div class="custom-expanded u-layout-horizontal u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-1">
+            <div class="u-align-left u-container-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <p class="u-align-left u-text u-text-palette-5-dark-2 u-text-4">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
                 <div class="u-clearfix u-expanded-width u-group-elements u-group-elements-1">
@@ -235,7 +235,7 @@
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-2">
+            <div class="u-align-left u-container-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-2">
               <div class="u-container-layout u-similar-container u-container-layout-2">
                 <p class="u-align-left u-text u-text-palette-5-dark-2 u-text-7">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
                 <div class="u-clearfix u-expanded-width u-group-elements u-group-elements-2">
@@ -245,7 +245,7 @@
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-3">
+            <div class="u-align-left u-container-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3">
                 <p class="u-align-left u-text u-text-palette-5-dark-2 u-text-10">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
                 <div class="u-clearfix u-expanded-width u-group-elements u-group-elements-3">
@@ -255,7 +255,7 @@
                 </div>
               </div>
             </div>
-            <div class="u-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-4">
+            <div class="u-align-left u-container-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-4">
               <div class="u-container-layout u-similar-container u-container-layout-4">
                 <p class="u-align-left u-text u-text-palette-5-dark-2 u-text-13">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
                 <div class="u-clearfix u-expanded-width u-group-elements u-group-elements-4">
@@ -405,7 +405,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                       </a>
                     </li>
                   </ul>
-                  <a href="#" class="u-align-center u-border-none u-btn u-button-style u-hover-feature u-hover-white u-palette-1-base u-btn-5"> Get Started</a>
+                  <a href="#" class="u-align-center u-border-none u-btn u-button-style u-hover-feature u-hover-palette-2-base u-palette-1-base u-btn-5"> Get Started</a>
                 </div>
               </div>
             </div>
@@ -477,7 +477,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <h6 class="u-hover-feature u-text u-text-default u-text-11"> Privacy Policy</h6>
                   <h6 class="u-hover-feature u-text u-text-default u-text-12"> Terms and Conditions</h6>
                   <h6 class="u-hover-feature u-text u-text-default u-text-13"> Support</h6>
-                  <h6 class="u-hover-feature u-text u-text-default u-text-14"> FAQ</h6>
+                  <h6 class="u-hover-feature u-text u-text-default u-text-14">
+                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-text-hover-palette-1-base u-btn-5" href="Projects.html#sec-b1a8"> FAQ</a>
+                  </h6>
                 </div>
               </div>
               <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-14-sm u-size-14-xs u-size-18-lg u-size-18-xl u-size-30-md u-layout-cell-4">
@@ -491,7 +493,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                         <input type="email" placeholder="your email address" id="email-1f06" name="email" class="u-input u-input-rectangle u-input-1" required="">
                       </div>
                       <div class="u-align-left u-form-group u-form-submit u-label-none">
-                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-hover-black u-palette-1-base u-btn-5">Send</a>
+                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-hover-black u-palette-1-base u-btn-6">Send</a>
                         <input type="submit" value="submit" class="u-form-control-hidden">
                       </div>
                       <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
