--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </div>
             <div class="u-container-style u-hover-feature u-list-item u-radius u-repeater-item u-shape-round u-white u-list-item-6">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-7"><span class="u-align-left u-file-icon u-icon u-text-palette-1-base u-icon-7"><img src="images/7381103-851c3019.png" alt=""></span>
-                <h4 class="u-hover-feature u-text u-text-14"> IT Consultancy</h4>
+                <h4 class="u-hover-feature u-text u-text-14"> IT Management</h4>
                 <p class="u-text u-text-grey-40 u-text-15"> "Leverage our expert insights to streamline your IT infrastructure and align your technology with your business goals."</p>
                 <a href="#" class="u-btn u-button-style u-none u-text-hover-palette-1-base u-text-palette-1-base u-btn-2">Read More&nbsp;<span class="u-icon u-text-palette-1-base"><svg class="u-svg-content" viewBox="0 -32 426.66667 426" style="width: 1em; height: 1em;"><path d="m213.332031 181.667969c0 4.265625-1.277343 8.53125-3.625 11.730469l-106.667969 160c-3.839843 5.761718-10.238281 9.601562-17.707031 9.601562h-64c-11.730469 0-21.332031-9.601562-21.332031-21.332031 0-4.269531 1.28125-8.535157 3.625-11.734375l98.773438-148.265625-98.773438-148.269531c-2.34375-3.199219-3.625-7.464844-3.625-11.730469 0-11.734375 9.601562-21.335938 21.332031-21.335938h64c7.46875 0 13.867188 3.839844 17.707031 9.601563l106.667969 160c2.347657 3.199218 3.625 7.464844 3.625 11.734375zm0 0"></path><path d="m426.667969 181.667969c0 4.265625-1.28125 8.53125-3.628907 11.730469l-106.664062 160c-3.839844 5.761718-10.242188 9.601562-17.707031 9.601562h-64c-11.734375 0-21.335938-9.601562-21.335938-21.332031 0-4.269531 1.28125-8.535157 3.628907-11.734375l98.773437-148.265625-98.773437-148.269531c-2.347657-3.199219-3.628907-7.464844-3.628907-11.730469 0-11.734375 9.601563-21.335938 21.335938-21.335938h64c7.464843 0 13.867187 3.839844 17.707031 9.601563l106.664062 160c2.347657 3.199218 3.628907 7.464844 3.628907 11.734375zm0 0"></path></svg></span>
                 </a>
@@ -370,7 +370,7 @@
             </div>
             <div class="u-container-style u-hover-feature u-list-item u-radius u-repeater-item u-shape-round u-white u-list-item-7">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-8"><span class="u-align-left u-file-icon u-icon u-text-palette-1-base u-icon-9"><img src="images/7381103-851c3019.png" alt=""></span>
-                <h4 class="u-hover-feature u-text u-text-16"> IT Consultancy</h4>
+                <h4 class="u-hover-feature u-text u-text-16"> IT Services</h4>
                 <p class="u-text u-text-grey-40 u-text-17"> "Leverage our expert insights to streamline your IT infrastructure and align your technology with your business goals."</p>
                 <a href="#" class="u-btn u-button-style u-none u-text-hover-palette-1-base u-text-palette-1-base u-btn-3">Read More&nbsp;<span class="u-icon u-text-palette-1-base"><svg class="u-svg-content" viewBox="0 -32 426.66667 426" style="width: 1em; height: 1em;"><path d="m213.332031 181.667969c0 4.265625-1.277343 8.53125-3.625 11.730469l-106.667969 160c-3.839843 5.761718-10.238281 9.601562-17.707031 9.601562h-64c-11.730469 0-21.332031-9.601562-21.332031-21.332031 0-4.269531 1.28125-8.535157 3.625-11.734375l98.773438-148.265625-98.773438-148.269531c-2.34375-3.199219-3.625-7.464844-3.625-11.730469 0-11.734375 9.601562-21.335938 21.332031-21.335938h64c7.46875 0 13.867188 3.839844 17.707031 9.601563l106.667969 160c2.347657 3.199218 3.625 7.464844 3.625 11.734375zm0 0"></path><path d="m426.667969 181.667969c0 4.265625-1.28125 8.53125-3.628907 11.730469l-106.664062 160c-3.839844 5.761718-10.242188 9.601562-17.707031 9.601562h-64c-11.734375 0-21.335938-9.601562-21.335938-21.332031 0-4.269531 1.28125-8.535157 3.628907-11.734375l98.773437-148.265625-98.773437-148.269531c-2.347657-3.199219-3.628907-7.464844-3.628907-11.730469 0-11.734375 9.601563-21.335938 21.335938-21.335938h64c7.464843 0 13.867187 3.839844 17.707031 9.601563l106.664062 160c2.347657 3.199218 3.628907 7.464844 3.628907 11.734375zm0 0"></path></svg></span>
                 </a>
@@ -378,7 +378,7 @@
             </div>
             <div class="u-container-style u-hover-feature u-list-item u-radius u-repeater-item u-shape-round u-white u-list-item-8">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-9"><span class="u-align-left u-file-icon u-icon u-text-palette-1-base u-icon-11"><img src="images/7381103-851c3019.png" alt=""></span>
-                <h4 class="u-hover-feature u-text u-text-18"> IT Consultancy</h4>
+                <h4 class="u-hover-feature u-text u-text-18"> Data Structuring</h4>
                 <p class="u-text u-text-grey-40 u-text-19"> "Leverage our expert insights to streamline your IT infrastructure and align your technology with your business goals."</p>
                 <a href="#" class="u-btn u-button-style u-none u-text-hover-palette-1-base u-text-palette-1-base u-btn-4">Read More&nbsp;<span class="u-icon u-text-palette-1-base"><svg class="u-svg-content" viewBox="0 -32 426.66667 426" style="width: 1em; height: 1em;"><path d="m213.332031 181.667969c0 4.265625-1.277343 8.53125-3.625 11.730469l-106.667969 160c-3.839843 5.761718-10.238281 9.601562-17.707031 9.601562h-64c-11.730469 0-21.332031-9.601562-21.332031-21.332031 0-4.269531 1.28125-8.535157 3.625-11.734375l98.773438-148.265625-98.773438-148.269531c-2.34375-3.199219-3.625-7.464844-3.625-11.730469 0-11.734375 9.601562-21.335938 21.332031-21.335938h64c7.46875 0 13.867188 3.839844 17.707031 9.601563l106.667969 160c2.347657 3.199218 3.625 7.464844 3.625 11.734375zm0 0"></path><path d="m426.667969 181.667969c0 4.265625-1.28125 8.53125-3.628907 11.730469l-106.664062 160c-3.839844 5.761718-10.242188 9.601562-17.707031 9.601562h-64c-11.734375 0-21.335938-9.601562-21.335938-21.332031 0-4.269531 1.28125-8.535157 3.628907-11.734375l98.773437-148.265625-98.773437-148.269531c-2.347657-3.199219-3.628907-7.464844-3.628907-11.730469 0-11.734375 9.601563-21.335938 21.335938-21.335938h64c7.464843 0 13.867187 3.839844 17.707031 9.601563l106.664062 160c2.347657 3.199218 3.628907 7.464844 3.628907 11.734375zm0 0"></path></svg></span>
                 </a>
@@ -386,7 +386,7 @@
             </div>
             <div class="u-container-style u-hover-feature u-list-item u-radius u-repeater-item u-shape-round u-white u-list-item-9">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-10"><span class="u-align-left u-file-icon u-icon u-text-palette-1-base u-icon-13"><img src="images/7381103-851c3019.png" alt=""></span>
-                <h4 class="u-hover-feature u-text u-text-20"> IT Consultancy</h4>
+                <h4 class="u-hover-feature u-text u-text-20"> Data Security</h4>
                 <p class="u-text u-text-grey-40 u-text-21"> "Leverage our expert insights to streamline your IT infrastructure and align your technology with your business goals."</p>
                 <a href="#" class="u-btn u-button-style u-none u-text-hover-palette-1-base u-text-palette-1-base u-btn-5">Read More&nbsp;<span class="u-icon u-text-palette-1-base"><svg class="u-svg-content" viewBox="0 -32 426.66667 426" style="width: 1em; height: 1em;"><path d="m213.332031 181.667969c0 4.265625-1.277343 8.53125-3.625 11.730469l-106.667969 160c-3.839843 5.761718-10.238281 9.601562-17.707031 9.601562h-64c-11.730469 0-21.332031-9.601562-21.332031-21.332031 0-4.269531 1.28125-8.535157 3.625-11.734375l98.773438-148.265625-98.773438-148.269531c-2.34375-3.199219-3.625-7.464844-3.625-11.730469 0-11.734375 9.601562-21.335938 21.332031-21.335938h64c7.46875 0 13.867188 3.839844 17.707031 9.601563l106.667969 160c2.347657 3.199218 3.625 7.464844 3.625 11.734375zm0 0"></path><path d="m426.667969 181.667969c0 4.265625-1.28125 8.53125-3.628907 11.730469l-106.664062 160c-3.839844 5.761718-10.242188 9.601562-17.707031 9.601562h-64c-11.734375 0-21.335938-9.601562-21.335938-21.332031 0-4.269531 1.28125-8.535157 3.628907-11.734375l98.773437-148.265625-98.773437-148.269531c-2.347657-3.199219-3.628907-7.464844-3.628907-11.730469 0-11.734375 9.601563-21.335938 21.335938-21.335938h64c7.464843 0 13.867187 3.839844 17.707031 9.601563l106.664062 160c2.347657 3.199218 3.628907 7.464844 3.628907 11.734375zm0 0"></path></svg></span>
                 </a>
@@ -394,7 +394,7 @@
             </div>
             <div class="u-container-style u-hover-feature u-list-item u-radius u-repeater-item u-shape-round u-white u-list-item-10">
               <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-11"><span class="u-align-left u-file-icon u-icon u-text-palette-1-base u-icon-15"><img src="images/7381103-851c3019.png" alt=""></span>
-                <h4 class="u-hover-feature u-text u-text-22"> IT Consultancy</h4>
+                <h4 class="u-hover-feature u-text u-text-22"> Cloud Computing</h4>
                 <p class="u-text u-text-grey-40 u-text-23"> "Leverage our expert insights to streamline your IT infrastructure and align your technology with your business goals."</p>
                 <a href="#" class="u-btn u-button-style u-none u-text-hover-palette-1-base u-text-palette-1-base u-btn-6">Read More&nbsp;<span class="u-icon u-text-palette-1-base"><svg class="u-svg-content" viewBox="0 -32 426.66667 426" style="width: 1em; height: 1em;"><path d="m213.332031 181.667969c0 4.265625-1.277343 8.53125-3.625 11.730469l-106.667969 160c-3.839843 5.761718-10.238281 9.601562-17.707031 9.601562h-64c-11.730469 0-21.332031-9.601562-21.332031-21.332031 0-4.269531 1.28125-8.535157 3.625-11.734375l98.773438-148.265625-98.773438-148.269531c-2.34375-3.199219-3.625-7.464844-3.625-11.730469 0-11.734375 9.601562-21.335938 21.332031-21.335938h64c7.46875 0 13.867188 3.839844 17.707031 9.601563l106.667969 160c2.347657 3.199218 3.625 7.464844 3.625 11.734375zm0 0"></path><path d="m426.667969 181.667969c0 4.265625-1.28125 8.53125-3.628907 11.730469l-106.664062 160c-3.839844 5.761718-10.242188 9.601562-17.707031 9.601562h-64c-11.734375 0-21.335938-9.601562-21.335938-21.332031 0-4.269531 1.28125-8.535157 3.628907-11.734375l98.773437-148.265625-98.773437-148.269531c-2.347657-3.199219-3.628907-7.464844-3.628907-11.730469 0-11.734375 9.601563-21.335938 21.335938-21.335938h64c7.464843 0 13.867187 3.839844 17.707031 9.601563l106.664062 160c2.347657 3.199218 3.628907 7.464844 3.628907 11.734375zm0 0"></path></svg></span>
                 </a>
@@ -822,7 +822,9 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                   <h6 class="u-hover-feature u-text u-text-default u-text-11"> Privacy Policy</h6>
                   <h6 class="u-hover-feature u-text u-text-default u-text-12"> Terms and Conditions</h6>
                   <h6 class="u-hover-feature u-text u-text-default u-text-13"> Support</h6>
-                  <h6 class="u-hover-feature u-text u-text-default u-text-14"> FAQ</h6>
+                  <h6 class="u-hover-feature u-text u-text-default u-text-14">
+                    <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-text-hover-palette-1-base u-btn-5" href="Projects.html#sec-b1a8"> FAQ</a>
+                  </h6>
                 </div>
               </div>
               <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-right-cell u-size-14-sm u-size-14-xs u-size-18-lg u-size-18-xl u-size-30-md u-layout-cell-4">
@@ -836,7 +838,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
                         <input type="email" placeholder="your email address" id="email-1f06" name="email" class="u-input u-input-rectangle u-input-1" required="">
                       </div>
                       <div class="u-align-left u-form-group u-form-submit u-label-none">
-                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-hover-black u-palette-1-base u-btn-5">Send</a>
+                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-hover-black u-palette-1-base u-btn-6">Send</a>
                         <input type="submit" value="submit" class="u-form-control-hidden">
                       </div>
                       <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
